# image_steganography

./: test.ppm
src/: CMakeLists.txt  main.cpp
src/argument_handling/: argument_handler_manager.cpp  argument_handler_manager.h
src/argument_handling/file_detector/: file_detector.cpp  file_detector.h
src/argument_handling/handlers/: check_handler.cpp  decrypt_handler.cpp  encrypt_handler.cpp  handlers.h  help_handler.cpp  info_handler.cpp
src/exceptions/: application_error.h  exceptions.h
src/exceptions/flag_error/: flag_error.cpp  flag_error.h
src/exceptions/flag_usage_error/: flag_usage_error.cpp  flag_usage_error.h
src/exceptions/injection_error/: injection_error.cpp  injection_error.h
src/exceptions/read_error/: read_error.cpp  read_error.h
src/exceptions/unsupported_format_error/: unsupported_format_error.cpp  unsupported_format_error.h
src/file_context/: file_context.h
src/filetypes/: filetypes.h
src/filetypes/bmp/: bmp.cpp  bmp.h
src/filetypes/bmp/headers/: bmp_file_header.h  bmp_info_header.h
src/filetypes/image_file/: image_file.cpp  image_file.h
src/filetypes/ppm/: ppm.cpp  ppm.h  ppm_pixel.h
src/filetypes/ppm/headers/: ppm_file_header.cpp  ppm_file_header.h
src/utils/: utils.cpp  utils.h
